# Pair_Trading_

./: .env.example  .gitignore  CHANGELOG.md  FINAL_INTEGRATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  SYSTEM_INTEGRATION_REPORT.md  UNIFIED_CONFIG_SUMMARY.md  launch_gui.py  main_cli.py  main_indices_cli.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: pull_request_template.md
Test/: label list.py  quick_install.py  test_hedge_rebalance_logic.py  test_imbalance_formula_match.py  test_margin_alert_fix.py  test_notification_spam.py  test_pair_logic.py  test_pyramiding_cooldown.py  test_recovery_pyramiding.py  test_risk_system_integration.py  test_system_logic.py  test_trading_lock_integration.py  test_volume_multiplier.py  test_zscore_rebalance.py
analysis/: __init__.py  analysis_worker.py  backtester.py  data_loader.py  discovery_engine.py  recommender.py  scorer.py  signals.py  statistics.py
analysis_cache/: BTCUSD_16385_20250114_20260114.pkl  BTCUSD_16385_20250116_20260116.pkl  ETHUSD_16385_20250114_20260114.pkl  ETHUSD_16385_20250116_20260116.pkl  EURUSD_16385_20250114_20260114.pkl  EURUSD_16385_20250116_20260116.pkl  GBPUSD_16385_20250114_20260114.pkl  GBPUSD_16385_20250116_20260116.pkl  USDAED_16385_20250114_20260114.pkl  USDAED_16385_20250116_20260116.pkl  USDCLP_16385_20250114_20260114.pkl  USDCLP_16385_20250116_20260116.pkl  USDCNY_16385_20250114_20260114.pkl  USDCNY_16385_20250116_20260116.pkl  USDCOP_16385_20250114_20260114.pkl  USDCOP_16385_20250116_20260116.pkl  USDCZK_16385_20250114_20260114.pkl  USDCZK_16385_20250116_20260116.pkl  USDDZD_16385_20250114_20260114.pkl  USDDZD_16385_20250116_20260116.pkl  USDEGP_16385_20250116_20260116.pkl  USDGEL_16385_20250114_20260114.pkl  USDGEL_16385_20250116_20260116.pkl  USDGHS_16385_20250114_20260114.pkl  USDGHS_16385_20250116_20260116.pkl  USDJPY_16385_20250114_20260114.pkl  USDJPY_16385_20250116_20260116.pkl  XAGUSD_16385_20250114_20260114.pkl  XAGUSD_16385_20250116_20260116.pkl  XAUUSD_16385_20250114_20260114.pkl  XAUUSD_16385_20250116_20260116.pkl
analytics/: pnl_attribution.py
asset/: .gitignore  README.md  __init__.py
config/: README.md  __init__.py  __init__.py.backup  adapter.py  defaults.py  instruments.py  manager.py  models.py  risk_limits.py  settings.py  trading_settings.py
core/: __init__.py  config_sync_manager.py  data_manager.py  mt5_connector.py  mt5_manager.py  mt5_position_recovery.py  mt5_trade_executor.py  position_monitor.py  position_persistence.py  realtime_market_data.py  setup_flag_manager.py  trading_system.py
docs/: CONFIG_MIGRATION_GUIDE.md
executors/: MIGRATION_COMPLETE.md  __init__.py  entry_executor.py  exit_executor.py  grid_executor.py  hedge_executor.py  pyramiding_executor.py  simple_unified_executor.py  volume_rebalancer.py
gui/: GUI_REFACTORING.md  chart_widget.py  config_sync_indicator.py  display_panel.py  gui_data_presenter.py  main_window_compact.py  main_window_integrated.py  main_window_integrated.py.backup  main_window_refactored.py  pair_discovery_tab.py  position_recovery_dialog.py  risk_alert_handler.py  settings_panel.py
handlers/: __init__.py  position_handlers.py  signal_handlers.py
licensing/: __init__.py  license_manager.py  license_validator.py
models/: __init__.py  cointegration.py  hedge_ratios.py
pair_trading_pro/: __init__.py
positions/: spread_07bc6bb8-8bb1-40ef-b5d7-f97c209cceeb.json  spread_1541857239-1541857251.json  spread_1541858277-1541858302.json  spread_1541859115-1541859247.json  spread_1541859855-1541859867.json  spread_1541861365-1541861368.json  spread_1543047562-1543047571.json  spread_1543048101-1543048126.json  spread_1543048959-1543048971.json  spread_1543051138-1543051322.json  spread_1543054863-1543054880.json  spread_1546828394-1546828404.json  (+184 more)
recovery/: __init__.py  (+1 more)
(+62 files in other folders)
